# esp-clock

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Containerfile  README.md  build.sh  cfg.toml  flash.sh  run-wokwi.sh  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: diagram.json
scripts/: build.sh  flash.sh  run-wokwi.sh
src/: display.rs  host.rs  main.rs  tryUrAnus.c
