[package]
name = "esp-clock"
version = "0.1.0"
authors = ["Kirill Mikhailov <kirill.mikhailov@espressif.com>"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "idf", "esp-idf", "esp32", "zx"]
description = "Demonstration of esp-rust-board functionality"
repository = "https://github.com/playfulFence/esp-clock"
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.dev]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

#[profile.release]
#opt-level = "s"

[features]
# default = [ "esp32c3_rust_board_ili9341" ]
# default = [ "esp32c3_ili9341" ]
# default = [ "esp32s3_ili9341" ]
default = [ "esp32s2_ili9341" ]
# default = [ "esp32s3_usb_otg" ]
# default = [ "esp32s2_usb_otg" ]
# default = [ "esp32_ili9341" ]


# Enable this feature in case you have a ESP32 ILI9341 board
esp32_ili9341 = []

# Enable this feature in case you have a ESP32S2 ILI9341 board
esp32s2_ili9341 = ["wifi"]

# Enable this feature in case you have a ESP32S3 ILI9341 board
esp32s3_ili9341 = ["wifi"]

# Enable this feature in case you have a ESP32C3 ILI9341 board
esp32c3_ili9341 = ["wifi"]

# Enable this feature in case you have a Kaluga ILI9341 board
kaluga_ili9341 = []

# Enable this feature in case you have a Kaluga ST7789 board
kaluga_st7789 = []

# Enable this feature in case you have a TTGO board
ttgo = []

# Enable this feature in case you have a Heltec board
heltec = []

# Enable this feature in case you have an ESP32S2-USB-OTG preview board
esp32s2_usb_otg = []

# Enable this feature in case you have an ESP32S3-USB-OTG board
esp32s3_usb_otg = []

# Enable this feature in case you have an ESP32C3-RUST-BOARD AND you want to use it's on-board sensors
esp32c3_rust_board_ili9341 = []

# Enable this feature in case you want to use network communication
wifi = []

[dependencies]
anyhow                  = { version = "1", features = ["backtrace"] }
log                     = "0.4"
esp-idf-sys             = { version = "0.31.6", features = ["binstart"] }
esp-idf-svc             = "0.42.0"
esp-idf-hal             = "0.38.0"
embedded-svc            = "0.22.0"
embedded-hal            = "0.2.7"
embedded-graphics       = "0.7"
embedded-text           = "0.5.0"
display-interface       = "0.4"
display-interface-spi   = "0.4"
st7789                  = "0.6"
ili9341                 = { version = "0.5", git = "https://github.com/playfulFence/ili9341-rs" }
ssd1306                 = "0.7"
rustzx-utils            = { version = "0.15", features = ["std"] }
rustzx-core             = { version = "0.15", features = ["embedded-roms"] }
time                    = { version = "0.3.9", features = ["macros", "parsing"]}
icm42670                = { git = "https://github.com/jessebraham/icm42670" }
shared-bus              = "0.2.4"
shtcx                   = "0.10.0"
bitmap-font             = "0.2.2"
tinybmp = "0.3.3"
profont = "0.6.1"
cfg-if = "1.0.0"
toml-cfg = "0.1.3"
#esp32c3_hal = { package = "esp32c3-hal",git = "https://github.com/esp-rs/esp-hal/" }  bare-metal variant, try later...

[patch.crates-io]
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", branch = "bugfix/pthread_convar_timeout_relative" }



[build-dependencies]
embuild = "0.30.1"
anyhow = "1.0.50"
